style.css
body,
div,
dl,
dt,
dd,
ul,
ol,
li,
h1,
h2,
h3,
h4,
h5,
h6,
pre,
code,
form,
fieldset,
legend,
input,
textarea,
p,
blockquote,
th,
td,
hr,
button,
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  margin: 0;
  padding: 0;
}


/* Style the rainbow text element. */
.rainbow-text {
  /* Create a conic gradient. */
  /* Double percentages to avoid blur (#000 10%, #fff 10%, #fff 20%, ...). */
  background: #CA4246;
  background-color: #CA4246;
  background: conic-gradient(#CA4246 16.666%,
      #E16541 16.666%,
      #E16541 33.333%,
      #F18F43 33.333%,
      #F18F43 50%,
      #8B9862 50%,
      #8B9862 66.666%,
      #476098 66.666%,
      #476098 83.333%,
      #A7489B 83.333%);

  /* Set thee background size and repeat properties. */
  background-size: 57%;
  background-repeat: repeat;

  /* Use the text as a mask for the background. */
  /* This will show the gradient as a text color rather than element bg. */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  /* Animate the text when loading the element. */
  /* This animates it on page load and when hovering out. */
  animation: rainbow-text-animation-rev 0.5s ease forwards;
}

/* Add animation on hover. */
.rainbow-text:hover {
  animation: rainbow-text-animation 0.5s ease forwards;
}

/* Move the background and make it larger. */
/* Animation shown when hovering over the text. */
@keyframes rainbow-text-animation {
  0% {
    background-size: 57%;
    background-position: 0 0;
  }

  20% {
    background-size: 57%;
    background-position: 0 1em;
  }

  100% {
    background-size: 300%;
    background-position: -9em 1em;
  }
}

/* Move the background and make it smaller. */
/* Animation shown when entering the page and after the hover animation. */
@keyframes rainbow-text-animation-rev {
  0% {
    background-size: 300%;
    background-position: -9em 1em;
  }

  20% {
    background-size: 57%;
    background-position: 0 1em;
  }

  100% {
    background-size: 57%;
    background-position: 0 0;
  }
}

body {
  font-family: 'Cairo', sans-serif, Verdana, Helvetica, Arial;
  background-color: #e7ebf1;
  color: #3e4e71;
}

.flex-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5em;
  padding-bottom: 50px;
}

header {
  font-family: 'Titillium Web', sans-serif;
  text-align: center;
  font-size: 3em;
  padding-top: 5%;
}

.main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5em;
}

.grid-clear {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5em;
}

.settings {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1em;
  padding-left: 1em;
  font-size: 11px;
}

.color-setting {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
}

input[type="color"] {
  -webkit-appearance: none;
  position: relative;
}

input[type="color"]::-webkit-color-swatch {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  box-sizing: border-box;
  border: 1.5px solid #476098;
}

.color-setting label {
  display: flex;
  align-items: center;
}

.pen-bg {
  display: flex;
  gap: 5px;
}


.radio-setting {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.radio-button {
  display: flex;
  align-items: center;
  gap: 5px;
}


.grid-setting {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.slider {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2px;
}

.line-switch {
  display: flex;
  justify-content: center;
  gap: 5px;
}

#container {
  box-sizing: content-box;
  display: grid;
  height: 60vw;
  width: 60vw;
  min-width: 320px;
  min-height: 320px;
  border: 6px solid rgba(128, 128, 128, 0.433);
  border-radius: 1%;
  background-color: white;
  margin-left: 5%;
  margin-right: 5%;
}

input[type="range"] {
  width: 85px;
}

.grid-lines {
  outline: 0.1px solid #e5e5e5;
}

#clear,
#clear2 {
  cursor: pointer;
  padding: 0.6em 3em;
  font-size: 1em;
  font-family: 'Cairo', sans-serif, Verdana, Helvetica, Arial;
  border: 2px solid #476098;
  color: #476098;
  overflow: hidden;
  margin: 0.5rem;
  border-radius: 10em;
  font-weight: 600;
  background-color: transparent;
  transition: 0.3s;
  margin-bottom: 40px
}

#clear:hover,
#clear2:hover {
  color: white;
  background-color: #343d5d;
  border: 2px solid #636f98;
}

#clear:active {
  background-color: #7584bb;
}

#clear2 {
  display: none;
}


@media (min-width: 720px) {
  header {
    font-size: 4em;
  }

  .settings {
    font-size: 14px;
    gap: 2em;
    padding-left: 2em;
  }
}

@media (min-width: 860px) {

  header {
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 6.5em;
  }

  .main-content {
    flex-direction: row;
    align-items: flex-start;
    gap: 3em;
  }

  .settings {
    flex-direction: column;
    font-size: 16px;
    gap: 2em;
    font-weight: 600;
  }

  .line-switch {
    gap: 15px;
  }
  

  .pen-bg {
    gap: 15px;
  }

  .grid-setting {
    order: 1;
  }

  .clear-setting {
    order: 2;
  }


  .color-setting {
    gap: 15px;
    order: 2;
  }

  .radio-setting {
    gap: 0px;
    order: 2;
  }

  .radio-button {
    gap: 15px;
  }

  .grid-clear {
    flex-direction: row-reverse;
    align-items: flex-end;
    flex-grow: ;
  }

  input[type="range"] {
    width: 150px;
  }

  #clear {
    display: none;
  }

  #clear2 {
    display: block;
    margin: 0;
    padding-left: 3.2em;
    padding-right: 3.2em;
  }


  #container {
    height: 550px;
    width: 550px;
    flex-shrink: 0
  }
}

